--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Example environment variables for DionysAI (Bun, Langchain)
+# Example environment variables for GPT-Theatre (Bun, Langchain)
 # Rename this file to ".env" and enter your secret keys.
 #
 # Supports: OpenAI, Anthropic (Claude), Ollama, Scaleway AI, HuggingFace, DeepSeek
